<resources>
    <string name="system_title">系统提示</string>
    <string name="data_none">暂无数据</string>
    <string name="app_name">薏米网</string>
    <string name="bt_save">保存</string>
    <string name="bt_ok">确定</string>
    <string name="bt_cancel">取消</string>
    <string name="bt_warn">警告</string>
    <string name="net_error">网络异常</string>
    <string name="no_data">暂无信息</string>
    <string name="no_evaluation">暂无评价</string>
    <string name="action_settings">Settings</string>
    <string name="confirm_ok">确定</string>
    <string name="confirm_cancel">取消</string>
    <string name="confirm_yes">是</string>
    <string name="confirm_no">否</string>
    <string name="logout_home">确定要退出吗？</string>
    <string name="public_back">返回</string>
    <string name="public_save">保存</string>
    <string name="public_all">全部</string>
    <string name="add_health_record_notice">提示</string>
    <string name="add_health_record_know">我知道了</string>
    <string name="u_share_title">薏米网APP</string>
    <string name="u_share_content">中国医生自由执业首选APP——薏米网手机客户端，下载地址：http://app.ememed.net/doctor.html</string>
    <string name="send_to">给更多人知道</string>
    <string name="progressdialog_loading">努力加载中...</string>
    <string name="progressdialog_sending">发送中...</string>
    <string name="progressdialog_sending_file">附件上传中...</string>
    <string name="progressdialog_sending_avatar">头像上传中...</string>
    <string name="apply_hosp_xiangce">从相册中选择</string>
    <string name="apply_hosp_photo">拍照</string>
    <string name="choose_photo_title">选择要上传的照片</string>
    <string name="doctor_type_quanke">全科医生</string>
    <string name="doctor_type_zhuanke">专科医生</string>
    <string name="text_get_data_failed">数据加载失败</string>
    <string name="text_get_data_none">暂无数据</string>
    <string name="text_check_net_setting">载入失败,点击尝试重新加载</string>
    <string name="notice_title_take_cash">提现成功</string>
    <string name="notice_title_textconsult">图文咨询</string>
    <string name="notice_title_sign">签约服务</string>
    <string name="notice_title_tijian">体检报告解读</string>
    <string name="notice_title_phoneconsult">预约通话</string>
    <string name="notice_title_private_doctor">私人医生服务</string>
    <string name="notice_demo_take_cash">您的体现申请已完成, 点击查看详细</string>
    <string name="notice_demo_textconsult">用户益力多向你发起咨询请求</string>
    <string name="notice_demo_sign">用户黄小明等2人向你发起签约服务</string>
    <string name="notice_demo_tijian">用户白玉堂等3人请求你解读报告</string>
    <string name="service_price">请输入价格(最多输入两位小数)</string>
    <string name="person_info">个人资料</string>
    <string name="user_service_set">服务设置</string>
    <string name="message_center">消息中心</string>
    <string name="finance_details">财务详情</string>
    <string name="finance_income_title">收入</string>
    <string name="service_evaluate">服务评价</string>
    <string name="apply_set">应用设置</string>
    <string name="about_us">关于我们</string>
    <string name="invate_hint">有奖邀请</string>
    <string name="asterisk_prompt">认证信息.带*为认证必备资料！</string>
    <string name="setting_app_account_safe_prompt">帐号安全</string>
    <string name="setting_app_account_push_notice_prompt">消息推送</string>
    <string name="app_version">v</string>
    <string name="lt_function_intro">服务介绍</string>
    <string name="lt_encourage">打分鼓励</string>
    <string name="lt_share">我要分享</string>
    <string name="lt_respon">免责声明</string>
    <string name="lt_problem">常见问题</string>
    <string name="act_title_home">薏米医生</string>
    <string name="act_title_service">服务</string>
    <string name="act_title_contact">联系人</string>
    <string name="act_title_patient">患者</string>
    <string name="act_title_doctor_friend">医生好友</string>
    <string name="act_title_stting_app">应用设置</string>
    <string name="act_title_stting_pwd">密码修改</string>
    <string name="activity_title_service_set">服务设置</string>
    <string name="activity_title_service_packet_setting">设置私人套餐</string>
    <string name="activity_title_service_set_textconsult">图文咨询</string>
    <string name="act_title_evaluation">服务评价</string>
    <string name="act_title_choose_room">选择科室</string>
    <string name="act_order_title">订单详情</string>
    <string name="tab_bottom_home">首页</string>
    <string name="tab_bottom_contact">患者</string>
    <string name="tab_bottom_friend">医生好友</string>
    <string name="tab_bottom_me">我</string>
    <string name="tab_bottom_service">服务</string>
    <string name="tab_top_home">薏米网</string>
    <string name="frag_title_chat">对话</string>
    <string name="frag_title_order">订单</string>
    <string name="frag_title_info">用户资料</string>
    <string name="consult_service">资讯</string>
    <string name="medical_assistant_service">用药助手</string>
    <string name="call_service">薏米助理（电话）</string>
    <string name="text_service">薏米助理（文字）</string>
    <string name="title_login">登录账号</string>
    <string name="contact_ememed">薏米资讯</string>
    <string name="service_opening">开放给用户购买</string>
    <string name="service_setting_two">请至少勾选两项服务</string>
    <string name="service_setting_period">请选择服务周期</string>
    <string name="service_setting_packet_price">请填写套餐价格</string>
    <string name="service_setting_is_open">已开放</string>
    <string name="service_setting_is_closed">未开放</string>
    <string name="service_setting_time_not_null_start">请设置服务的开始时间</string>
    <string name="service_setting_time_not_null_end">请设置服务的结束时间</string>
    <string name="service_setting_time_not_null_date">请选择一周中的某天或多天</string>
    <string name="service_setting_price_illegal">请输入正确的金额</string>
    <string name="service_setting_jiahao_num_illegal">请输入正确的加号名额</string>
    <string name="service_setting_time">请设置时间</string>
    <string name="service_setting_time_success">设置成功</string>
    <string name="service_setting_price">价格设置为空时，您将不能开启此项服务；如果您之前开启过该服务，价格设置为空时系统将为您自动关闭该项服务</string>
    <string name="service_setting_no_price">价格不能为空</string>
    <string name="service_setting_shangmen">请填写上门地址</string>
    <string name="service_setting_jiahao_hospital">请输入医院名称</string>
    <string name="service_setting_jiahao_num">请输入加号名额</string>
    <string name="system_info">系统提示</string>
    <string name="bt_common_problem">常见问题</string>
    <string name="my_doctor_packet_un_setting_tips">该项未完成设置,是否现在设置?</string>
    <string name="service_setting_guide">温馨提示：\n\n\n1. 建议勾上全部服务， 将能为您的用户带来更多的服务， 并获得丰厚收入。\n\n2. 建立多种的服务周期给用户更多选择，获得更多销售机会。</string>
    <string name="my_doctor_packet_not_setting_textconsult">根据您的医生身份属性，系统已帮您完成设置！</string>
    <string name="service_setting_price_v2">设置价格</string>
    <string name="service_setting_zhuyuan">预约住院</string>
    <string name="service_setting_jiahao">预约加号</string>
    <string name="service_setting_end">私人医生服务期间，您和用户之间可以进行无限制沟通，同时用户可申请每周一次的预约通话服务。</string>
    <string name="old_pwd">原密码：</string>
    <string name="old_pwd_contant">请输入旧密码</string>
    <string name="new_pwd">新密码：</string>
    <string name="new_pwd_contant">请输入新密码</string>
    <string name="confirm_pwd">确认密码:</string>
    <string name="upload_dismiss">取消上传</string>
    <string name="upload_confirm">确定上传图片？</string>
    <string name="bt_upload_work_address">提交执业地点</string>
    <string name="bt_upload_success">确 认</string>
    <string name="public_feedback">意见反馈</string>
    <string name="txt_feedback_hint">请提出您的宝贵意见或建议，薏米网的成长离不开您的支持，我们将为提出有效建议的您给予礼物奖励，请留下有效的联系方式！</string>
    <string name="txt_feedback_title">QQ\\邮箱\\电话</string>
    <string name="register_protocol"><u>&lt;薏米医生服务协议&gt;</u></string>
    <string name="register_info_later">稍候提供资料>></string>
    <string name="register_info_camera">请对以下证件进行拍照,以帮助我们验证您的医生身份。</string>
    <string name="register_info_almost_success">验证身份以激活全部服务</string>
    <string name="register_uploading_file">正在提交照片,请稍候</string>
    <string name="register_upload_failed">网络不佳,提交失败</string>
    <string name="register_success_assisant">薏米助理会在2个工作日内为您核实身份,并给予您通知.</string>
    <string name="register_success_not_set_work_address">请填写您的&lt;&lt;医师执业证书&gt;&gt;的详细执业地点</string>
    <string name="register_toast_set_work_address">请填写执业地点</string>
    <string name="register_uploading_again">再次提交</string>
    <string name="register_camera_file">对 医师执业证书 拍照</string>
    <string name="register_camera_idcard">对 居民身份证 拍照</string>
    <string name="register_camera_breast_plate">对 胸牌 拍照</string>
    <string name="register_camera_work_permit">对 工作证 拍照</string>
    <string name="register_upload_work_address">验证信息已提交成功</string>
    <string name="register_camera_tips_1">1. 请确保是您本人的证书。</string>
    <string name="register_camera_tips_2">2. 打开含有证书编号的页面(如图)</string>
    <string name="register_camera_tips_3">3. 请确认拍照文字清晰可读。</string>
    <string name="register_camera_tips_idcard_1">1. 请确保身份证为您本人。</string>
    <string name="register_camera_tips_idcard_2">2. 选择身份证正面进行拍照。</string>
    <string name="register_camera_tips_idcard_3">3. 拍照请保证数字能清晰可读。</string>
    <string name="register_pic_upload_tip">*如您无法上传头像或证件照，您可将图片通过QQ发给小薏帮您处理（小薏QQ号：3090823200）</string>
    <string name="register_camera_tips_breast_plate_1">1. 请确保胸牌为您本人。</string>
    <string name="register_camera_tips_breast_plate_2">2. 选择胸牌正面进行拍照。</string>
    <string name="register_camera_tips_breast_plate_3">3. 请确认拍照文字清晰可读。</string>
    <string name="register_camera_tips_work_permit_1">1. 请确保工作证为您本人。</string>
    <string name="register_camera_tips_work_permit_2">2. 选择工作证正面进行拍照。</string>
    <string name="register_camera_tips_work_permit_3">3. 请确认拍照文字清晰可读。</string>
    <string name="register_bt_camera_cernum">医师执业证书</string>
    <string name="register_bt_camera_idcard">中国居民身份证</string>
    <string name="register_account_length">手机号码长度错误</string>
    <string name="register_account_length_null">请填写手机号码</string>
    <string name="register_title">薏米网，实现全科医生和专科医生相互分诊、转诊及交流的移动医疗平台</string>
    <string name="register_quanke">薏米全科医生：\n①免费使用“薏米社区病人病历管理云系统”以及“薏米社区医生APP”，轻松方便为广大居民提供基础医疗服务。\n②通过薏米网及时方便向专科医生转诊病人，提升服务价值。</string>
    <string name="register_zhuanke">薏米专科医生：\n①打造医生工作室，提升个人品牌\n②享受法律顾问、统计学咨询、用药助手等各项专业服务，为行医之路保驾护航。\n③提供个性化医疗服务，获得市场化报酬。</string>
    <string name="register_hint">温馨提示：</string>
    <string name="register_hint_content">为了让病患更方便地找到您，建议在二甲以下医院执业的专科医生选择注册全科医生。</string>
    <string name="seek_phone_verify">验证手机</string>
    <string name="seek_rest_pwd">重置密码</string>
    <string name="seek_success">完成</string>
    <string name="seek_step3_title">密码已重置成功</string>
    <string name="seek_step3_btn">立即登录</string>
    <string name="text_consult_now">立即沟通</string>
    <string name="text_consult_three_day">48小时后</string>
    <string name="text_service_end">服务结束</string>
    <string name="text_none_contact">没有找到对应的数据</string>
    <string name="text_get_contact_title">如何获取联系人？</string>
    <string name="text_get_contact_step1">1: 点击右上角【邀请患者】</string>
    <string name="text_get_contact_step2">2: 设置服务供用户购买：我 -> 服务设置</string>
    <string name="text_get_contact_step2_sub">温馨提示，服务项目开启越多，获得购买的机会越大!</string>
    <string name="text_get_contact_step3">3: 完善个人资料，包括个人履历、从业资历、获奖或发表论文情况等，都可以大大提高个人知名度和信任度，从而提高用户购买机会！</string>
    <string name="finace_notice">为确保您能在最短的时间内收到您的报酬，小薏对您有几点小小的建议:</string>
    <string name="finace_notice_2">为帮助小薏进行全名验证，并确保您能在最短时间内收到您的报酬，小薏建议您填写收款人姓名。</string>
    <string name="finace_notice_text1">* 请确认个人信息的姓名和您的银行卡开户姓名相同</string>
    <string name="finace_notice_text2">* 请确认您关联的银行卡为借记卡</string>
    <string name="finace_notice_text3">* 请确认开户行信息与银行卡号对应</string>
    <string name="logon_success">恭喜您！</string>
    <string name="logon_success_2">您的个人账户注册成功！</string>
    <string name="logon_success_3">小薏提醒您：</string>
    <string name="logon_success_4">完善资料后会有更多惊喜哦！您可体验小薏为您量身打造的优质服务，同时您的身份将对所有薏米患者公开。</string>
    <string name="logon_success_5">完善资料</string>
    <string name="logon_success_6">开始使用</string>
    <string name="add_bankcard_username">请输入姓名</string>
    <string name="add_bankcard_cardId">请输入用户身份证号</string>
    <string name="add_bankcard_bankname">例：中国工商银行荔湾支行</string>
    <string name="add_bankcard_num">请输入银行卡号</string>
    <string name="add_zhifubao_Id">请输入支付宝账号</string>
</resources>