<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
           	android:layout_margin="10dp"
            android:gravity="center"
            android:drawableLeft="@drawable/seek_step1_nor"
            android:text="@string/seek_phone_verify" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:drawableLeft="@drawable/seek_step2_nor"
            android:gravity="center"
            android:text="@string/seek_rest_pwd" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
           	android:gravity="center"
            android:drawableLeft="@drawable/seek_step3_nor"
            android:text="@string/seek_success" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:gravity="center"
        android:orientation="vertical" >

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/seek_success_green" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:textSize="18sp"
            android:text="@string/seek_step3_title"
            android:textColor="@color/black" />

        <Button
            android:id="@+id/btn_login"
            style="@style/text"
            android:layout_width="fill_parent"
            android:layout_height="40dp"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="25dp"
            android:layout_marginTop="15dp"
            android:background="@drawable/bt_login"
            android:onClick="doClick"
            android:text="@string/seek_step3_btn" />
    </LinearLayout>

</LinearLayout>