<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ll_empty"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
     >
    
    <ScrollView 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >
    
    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >
    
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center_vertical"
        android:orientation="vertical" >

        <ImageView
            android:id="@+id/iv_bg_empty"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="60dp"
            android:gravity="center_horizontal"
            android:src="@drawable/ic_contact_null" />

        <TextView
            android:id="@+id/tv_notice"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:gravity="center_horizontal"
            android:text="@string/text_none_contact"
            android:textColor="@color/huise"
            android:textSize="16sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="26dp"
        android:layout_marginLeft="14dp"
        android:layout_marginRight="14dp"
        android:layout_weight="1"
        android:orientation="vertical" >

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/ic_notice_tips"
            android:drawablePadding="2dp"
            android:text="@string/text_get_contact_title"
            android:textColor="@color/topbg_green"
            android:textSize="18sp" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/text_get_contact_step1"
            android:textColor="@color/black"
            android:textSize="16sp" />
        
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/text_get_contact_step2"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="18dp"
            android:layout_marginTop="4dp"
            android:text="@string/text_get_contact_step2_sub"
            android:textColor="@color/huise"
            android:textSize="12sp" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_marginTop="18dp"
            android:orientation="horizontal" >

            <!-- <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="2:"
                android:textColor="@color/black"
                android:textSize="18sp" /> -->

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="2dp"
                android:text="@string/text_get_contact_step3"
                android:textColor="@color/black"
                android:textSize="16sp" />
        </LinearLayout>
    </LinearLayout>
    </LinearLayout>
    </ScrollView>
</LinearLayout>