<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:gravity="center_vertical"
    android:orientation="horizontal" >

    <TextView
        android:id="@+id/tv_seek_step1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp"
        android:layout_weight="1"
        android:drawableLeft="@drawable/seek_step1"
        android:gravity="center"
        android:text="@string/text_consult_now"
        android:textSize="10sp" />

    <TextView
        android:id="@+id/tv_seek_step2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp"
        android:layout_weight="1"
        android:drawableLeft="@drawable/seek_step2"
        android:gravity="center"
        android:text="@string/text_consult_three_day"
        android:textSize="10sp" />

    <TextView
        android:id="@+id/tv_seek_step3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp"
        android:layout_weight="1"
        android:drawableLeft="@drawable/seek_step3"
        android:gravity="center"
        android:text="@string/text_service_end"
        android:textSize="10sp" />

</LinearLayout>